--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,16 @@ version '1.0'
 repositories {
     mavenCentral()
 }
-
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId = 'cn.bobdeng.rbac'
+            artifactId = 'rbac-tenant-domain'
+            version = '0.1'
+            from components.java
+        }
+    }
+}
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
