--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ plugins {
 
 group 'cn.bobdeng.rbac'
 version '1.0-SNAPSHOT'
-
+sourceCompatibility = JavaVersion.VERSION_16
+targetCompatibility = JavaVersion.VERSION_16
 repositories {
     mavenCentral()
 }
